--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,7 @@
     --FS-NAME-USER: 1.25rem;
     --FS-NAV: 0.75rem;
     --FS-SIDEBAR: 0.9rem;
+    --FS-TITLE: 1.05rem;
     --FS-TITRE-FORM: 1.125rem; /*18px*/
     --FS-TITRE-PAGE: 1.25rem;
     /* FIN FONT-SIZE */
@@ -437,7 +438,8 @@ input[type="reset"]:hover,
 .page-content-list-user,
 .page-content-account,
 .page-content-detail,
-.page-content-update-mail {
+.page-content-update-mail,
+.page-content-historical-mail {
     margin-top: var(--MG-TOP-SECTION);
 }
 /* FIN CONTENT PAGE */
@@ -452,7 +454,8 @@ input[type="reset"]:hover,
 .page-content-list-profil h2,
 .page-content-list-user h2,
 .page-content-account h2,
-.page-content-update-mail h2 {
+.page-content-update-mail h2,
+.page-content-historical-mail h2 {
     color: var(--DARK);
     font-family: var(--FF-ROBOTO);
     font-size: var(--FS-TITRE-PAGE);
@@ -557,12 +560,13 @@ input[type="reset"]:hover,
 .title-deleted-user,
 .title-list-profil,
 .title-list-user,
-.title-dashboard-mail {
+.title-dashboard-mail,
+.title-historical-mail {
     align-items: center;
     color: var(--DARK);
     display: flex;
     font-family: var(--FF-ROBOTO);
-    font-size: var(--FS-NAME-USER);
+    font-size: var(--FS-TITLE);
     font-weight: var(--FW-FIELD);
     justify-content: space-between;
     margin-bottom: 0.5rem;
@@ -574,7 +578,8 @@ input[type="reset"]:hover,
 .element-deleted-user,
 .element-list-profil,
 .element-list-user,
-.element-dashboard-mail {
+.element-dashboard-mail,
+.element-historical-mail {
     align-items: center;
     color: var(--BLACK);
     display: flex;
@@ -591,7 +596,8 @@ input[type="reset"]:hover,
 .element-list-user,
 .element-dashboard-mail,
 .element-notif,
-.element-reminder {
+.element-reminder,
+.element-historical-mail {
     border-bottom: var(--BORDER-BT-DOTTED);
 }
 
@@ -658,13 +664,35 @@ input[type="reset"]:hover,
     margin-top: 0.5rem; 
 }
 
-.title-dashboard-mail p,
-.element-dashboard-mail output,
-.dashboard-action {
-    width: 12%;
+.title-dashboard-mail,
+.element-dashboard-mail {
+    gap: 1rem;
+}
+
+.dashboard-action,
+.dashboard-number {
+    width: 10%;
+}
+
+.dashboard-file,
+.dashboard-status {
+    width: 4%;
+}
+
+.dashboard-expediteur,
+.dashboard-service {
+    width: 7%;
 }
 
 .dashboard-date {
+    width: 9%;
+}
+.dasboard-object {
+    width: 18%;
+}
+
+output[class="dashboard-file"],
+output[class="dashboard-status"] {
     text-align: center;
 }
 
@@ -674,12 +702,12 @@ input[type="reset"]:hover,
     width: var(--WD-BTN-OPERATION);
 }
 
-.dashboard-file img {
-    width: 1.5rem;
-}
-
 .dashboard-action a {
     text-decoration: none;
+}
+
+.dashboard-file img {
+    width: 1.5rem;
 }
 
 /* FIN PAGE TABLEAU DE BORD */
@@ -814,5 +842,15 @@ input[type="reset"]:hover,
 .update-file {
     text-decoration: none;
 }
-
 /* FIN PAGE MODIFIER */
+
+/* DEBUT PAGE HISTORIQUE */
+.title-historical-mail {
+    margin-top: 1.5rem;
+}
+
+.title-historical-mail p,
+.element-historical-mail p {
+    width: 33%;
+}
+/* FIN PAGE HISTORIQUE */
